Sequelize integrated
